# Argmax

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main copy.cpp  main.cpp  todo.md
FA/: card.cpp  card.h  deck.cpp  deck.h  hand.cpp  hand.h  people.cpp  people.h  print_test.txt  sanctuary.cpp  sanctuary.h
FA/data/: all.txt  cards.txt  sanctuary.txt
FA/subsets/: 12_10_1.txt  12_10_2.txt  14_18_1.txt  14_18_2.txt  15_9_1.txt  15_9_2.txt  8_10_1.txt  8_10_2.txt  8_7_1.txt  8_7_2.txt  8_7_3.txt  8_7_4.txt  all  base_deck.txt  extension_deck.txt  notes.txt  t30_30_a.txt  t30_30_b.txt  t40_30_a.txt  t40_35_a.txt  temp.txt
NK/: nk.cpp  nk.h
NK/instances/: 100_0.nk  100_1.nk  100_2.nk  100_3.nk  100_4.nk  100_8.nk
SAT/: solution.h
SAT/old/: bit_string.cpp  bit_string.h  clause.cpp  clause.h  solution.h
docs/: algorithmes.md  evolution_results.md  how_to_use.md  local_search_results.md
docs/tables/: avg.md  avg.tex  avg.txt  best_1000_000.md  best_1000_000.tex  best_100_000.md  best_100_000.tex  best_100_000.txt  best_10_000.md  best_10_000.tex  best_10_000.txt  best_1_000.md  best_1_000.tex  best_1_000.txt  best_1_000_000.md  best_1_000_000.tex  budgets.md  budgets.tex  budgets.txt
instances/: sat_10.txt
presets/: FA_evo.md  SAT_evo.md  template.md
python/: algo_labels.py  button.py  csv_generator.py  data_loader.py  data_visualizer.py  file_selector.py  tables.py  window.py
python/plots/: plot_annoted_axis.py  plot_anytime.py  plot_anytime_avg.py  plot_axis.py  plot_correlation.py  plot_correlation_hist.py  plot_correlation_mean_std.py  plot_correlation_reg.py  plot_dual_correlation.py  plot_one_run.py
sat_specific/: bit_string.cpp  bit_string.h  clause.cpp  clause.h  formule.cpp  formule.h  solution copy.cpp  solution copy.h  solution.cpp  solution.h
source/: argmax.cpp  argmax.h  file_data.cpp  file_data.h  fitness_instance.cpp  fitness_instance.h  instance.cpp  instance.h  local_search.cpp  local_search.h  main.cpp  random_utils.cpp  random_utils.h  reversible_instance.h
source/algo/: argmax.cpp  argmax.h  local_search.cpp  local_search.h  local_search_factory.cpp  local_search_factory.h
source/arg_file/: file_data.cpp  job.cpp  job.h  job_queue.cpp  job_queue.h  parameters.cpp  parameters.h  run_parameters.cpp  run_parameters.h
source/problem/: nk.cpp  (+8 more)
(+122 files in other folders)
